# vid2insight

./: .dockerignore  .gitignore  Dockerfile  README.md  calculate_bert_score.py  calculate_bleu_score.py  calculate_rouge_score.py  ground_truth.txt  llm_evaluation.py  model_generated.txt  pyproject.toml
agent/: constants.py  nodes.py  prompts.py  vid2_insight_graph.py
agent/config/: assistant_config.py  base_config.py  constants.py  initialize_logger.py  logger_config.yaml
agent/doc_agent/: constants.py  doc_graph.py  initialize_logger.py  nodes.py  prompts.py
agent/ingestion/: audio_extractor.py  frame_extractor.py
agent/state/: agent_state.py  input_state.py  output_state.py
agent/student_agent/: constants.py  nodes.py  prompts.py  student_graph.py
agent/ui/: ui.py
agent/utils/: audio_extractor.py  misc_utils.py
eval/: README.md  __init__.py  calculate_all_metrics.py  llm_evaluation.py  run_evaluation.py
eval/config/: __init__.py  model_config.py
eval/constants/: __init__.py  criteria.py  paths.py
eval/metrics/: __init__.py  calculate_bert_score.py  calculate_bleu_score.py  calculate_rouge_score.py
evaluation/: README.md  __init__.py  calculate_all_metrics.py  llm_evaluation.py  run_evaluation.py  run_transcript_eval.py
evaluation/config/: __init__.py  model_config.py
evaluation/constants/: __init__.py  criteria.py
evaluation/evaluate_scores/: direct_transcript_evaluation.py  evaluate_exec_summary.py  evaluate_general_chat.py  evaluate_product_chat.py  evaluate_product_doc.py  evaluate_student_chat.py  evaluate_student_mcq.py  evaluate_student_summary.py  evaluate_transcript.py  extract_transcript.py
evaluation/generate_output/: generate_exec_summary.py  generate_exec_summary_direct.py  generate_general_chat.py  generate_product_chat.py  generate_product_doc.py  generate_student_chat.py  generate_student_mcq.py  generate_student_summary.py
evaluation/ground_truth/: General_purpose_chat.txt  Product_chat.txt  Student_chat.txt  detailed_product_Doc.txt  executive_summary.txt  ground_truth.txt  student_mcq.txt  student_summary.txt
evaluation/metrics/: __init__.py  (+3 more)
ingestion/: audio_extractor.py  audio_transcript_generator.py  combined_text_transcriptor.py  combined_transcript_generator.py  constants.py  frame_extractor.py  frame_json_parser.py  frame_transcript_generator.py  prompts.py  transcriptor.py
(+31 files in other folders)
